--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="bucket img2-t6 center">학점은행제 학사취득하기</div>
         <div class="bucket img1-t7 center">정보처리산업기사 취득하기</div>
         <div class="bucket img1 center">1월1일 해뜨는거 보기</div>
-        <div class="bucket img1 center">10kg </div>
+        <div class="bucket img1 center">10kg 감량하기</div>
     </div>
 
 </body>
